Fix group collapse btn position

--- a/src/assets/styles/pages/_board-details.scss
+++ b/src/assets/styles/pages/_board-details.scss
@@ -26,6 +26,9 @@
       }
 
       .collapse-btn {
+        display: grid;
+        justify-content: center;
+        align-items: end;
         margin: 0;
         padding: 0;
       }
